--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.2.15",
+    "@angular/animations": "20.3.12",
     "@angular/cdk": "^18.1.1",
-    "@angular/cli": "19.2.19",
-    "@angular/common": "19.2.15",
-    "@angular/compiler": "19.2.15",
-    "@angular/compiler-cli": "19.2.15",
-    "@angular/core": "19.2.15",
-    "@angular/forms": "19.2.15",
-    "@angular/language-service": "19.2.15",
+    "@angular/cli": "20.3.10",
+    "@angular/common": "20.3.12",
+    "@angular/compiler": "20.3.12",
+    "@angular/compiler-cli": "20.3.12",
+    "@angular/core": "20.3.12",
+    "@angular/forms": "20.3.12",
+    "@angular/language-service": "20.3.12",
     "@angular/material": "^18.1.1",
-    "@angular/platform-browser": "19.2.15",
-    "@angular/platform-browser-dynamic": "19.2.15",
-    "@angular/platform-server": "19.2.15",
-    "@angular/router": "19.2.15",
-    "@angular/service-worker": "19.2.15",
+    "@angular/platform-browser": "20.3.12",
+    "@angular/platform-browser-dynamic": "20.3.12",
+    "@angular/platform-server": "20.3.12",
+    "@angular/router": "20.3.12",
+    "@angular/service-worker": "20.3.12",
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^15.0.2",
@@ -45,14 +45,14 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.19",
-    "@angular-devkit/core": "^19.2.19",
-    "@angular-devkit/schematics": "^19.2.19",
+    "@angular-devkit/core": "^20.3.10",
+    "@angular-devkit/schematics": "^20.3.10",
     "@angular-eslint/builder": "18.1.0",
     "@angular-eslint/eslint-plugin": "18.1.0",
     "@angular-eslint/eslint-plugin-template": "18.1.0",
     "@angular-eslint/schematics": "18.1.0",
     "@angular-eslint/template-parser": "18.1.0",
+    "@angular/build": "^20.3.10",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
     "eslint": "^8.28.0",
